--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "compress",
     "zip",
     "file compress",
-    "packages"
+    "packages",
+    "imagemin"
   ],
   "license": "ISC",
   "bugs": {
@@ -25,6 +26,7 @@
   "homepage": "https://github.com/douzi8/file-package",
   "dependencies": {
     "file-system": "^1.2.6",
+    "imagemin": "^3.1.0",
     "utils-extend": "^1.0.6",
     "zip-stream": "^0.5.0"
   },
